--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <!-- BikeLab Theme Colors -->
+    <color name="lime_green">#FF8BD53F</color>
+    <color name="lime_green_dark">#FF228B22</color>
+    <color name="light_green">#FF90EE90</color>
+    <color name="dark_gray">#FF333333</color>
+    <color name="light_gray">#FFCCCCCC</color>
+    <color name="silver">#FFC0C0C0</color>
+    <color name="circuit_gray">#FFE0E0E0</color>
 </resources>
